@@ -201,47 +201,3 @@ class PantoGraph(Plotter):
         )
 
         self.turtle.draw_grid()
-
-    # ----------------- reporting methods -----------------
-
-    def status(self):
-        print("------------------------------------------")
-        print("                      | Servo 1 | Servo 2 ")
-        print("                      | Shoulder| Elbow   ")
-        print("----------------------|---------|---------")
-
-        pw_1, pw_2 = self.get_pulse_widths()
-        print(f"{'pulse-width |':>23}", f"{pw_1:>7.0f}", "|", f"{pw_2:>7.0f}")
-
-        angle_1, angle_2 = self.angle_1, self.angle_2
-        print(f"{'angle |':>23}", f"{angle_1:>7.0f}", "|", f"{angle_2:>7.0f}")
-
-        h1, h2 = self.hysteresis_correction_1, self.hysteresis_correction_2
-        print(f"{'hysteresis correction |':>23}", f"{h1:>7.1f}", "|", f"{h2:>7.1f}")
-        print("------------------------------------------")
-        print(f"{'x/y location |':>23}", f"{self.x:>7.1f}", "|", f"{self.y:>7.1f}")
-        print()
-        print("------------------------------------------")
-        print("pen:", self.pen.position)
-
-        bl = self.bounds[0], self.bounds[1]
-        tr = self.bounds[2], self.bounds[3]
-        print("------------------------------------------")
-        print("bottom left:", bl, "top right:", tr)
-        print("------------------------------------------")
-
-    def draw_outline(self):
-        """Draw an outline of the available drawing area."""
-
-        angle1 = -90
-        angle2 = -30
-
-        x, y = self.angles_to_xy(angle1, angle2)
-        self.xy(x, y)
-        print(angle1, angle2)
-
-        for angle2 in range(angle2, 31, 1):
-            x, y = self.angles_to_xy(angle1, angle2)
-            print("gotxy")
-
-            self.xy(x, y, draw=True)
